# legal-rag

./: .gitignore  README.md  agreement_aliases.json  agreement_metadata.json  pyproject.toml
app/: api.py  config.py  test_rag.py  test_reranker.py  test_summary.py
app/debug/: ocr_test_retrieval.py
app/evaluation/: evaluate_qa.py  evaluate_reranker.py  evaluate_retrieval.py  qa_test_cases.py
app/ingestion/: agreement_detector.py  chunker.py  generate_agreement_metadata.py  pdf_loader.py  reranker.py  retriever.py  table_extractor.py  test_chunker.py  test_ocr.py  test_pdf_loader.py  test_reranker.py  test_retrieval.py  test_vector_store.py  vector_store.py
app/llm/: llm.py  summarizer.py  test_openai.py
legal-rag-ui/: index.html  package-lock.json  package.json
legal-rag-ui/src/: App.css  App.jsx  index.css
