[project]
name = "legal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "huggingface-hub[cli]>=1.16.1",
    "langchain>=1.3.6",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.41.0",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]
